Use Java's unmodifiable collections instead of Guava
Part of #44